Source/WebCore/css/CSSComputedStyleDeclaration.cpp
@@ -291,8 +291,6 @@ static const CSSPropertyID computedProperties[] = {
     CSSPropertyWebkitGridEnd,
     CSSPropertyWebkitGridBefore,
     CSSPropertyWebkitGridAfter,
-    CSSPropertyWebkitGridColumn,
-    CSSPropertyWebkitGridRow,
     CSSPropertyWebkitHighlight,
     CSSPropertyWebkitHyphenateCharacter,
     CSSPropertyWebkitHyphenateLimitAfter,
@@ -1940,15 +1938,17 @@ PassRefPtr<CSSValue> CSSComputedStyleDeclaration::getPropertyCSSValue(CSSPropert
             return valueForGridTrackList(style->gridRows(), style.get(), m_node->document()->renderView());
 
         case CSSPropertyWebkitGridStart:
-        case CSSPropertyWebkitGridColumn:
             return valueForGridPosition(style->gridItemStart());
         case CSSPropertyWebkitGridEnd:
             return valueForGridPosition(style->gridItemEnd());
         case CSSPropertyWebkitGridBefore:
-        case CSSPropertyWebkitGridRow:
             return valueForGridPosition(style->gridItemBefore());
         case CSSPropertyWebkitGridAfter:
             return valueForGridPosition(style->gridItemAfter());
+        case CSSPropertyWebkitGridColumn:
+            return getCSSPropertyValuesForGridShorthand(webkitGridColumnShorthand());
+        case CSSPropertyWebkitGridRow:
+            return getCSSPropertyValuesForGridShorthand(webkitGridRowShorthand());
 
         case CSSPropertyHeight:
             if (renderer) {
@@ -2948,6 +2948,16 @@ PassRefPtr<CSSValueList> CSSComputedStyleDeclaration::getCSSPropertyValuesForSid
     if (showLeft)
         list->append(leftValue);
 
+    return list.release();
+}
+
+PassRefPtr<CSSValueList> CSSComputedStyleDeclaration::getCSSPropertyValuesForGridShorthand(const StylePropertyShorthand& shorthand) const
+{
+    RefPtr<CSSValueList> list = CSSValueList::createSlashSeparated();
+    for (size_t i = 0; i < shorthand.length(); ++i) {
+        RefPtr<CSSValue> value = getPropertyCSSValue(shorthand.properties()[i], DoNotUpdateLayout);
+        list->append(value);
+    }
     return list.release();
 }
 
